WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267804
[EME] Blocked encrypted samples are not enqueued after a CDM is attached to a SourceBuffer (affects netflix.com)
https://bugs.webkit.org/show_bug.cgi?id=267804
Summary
[EME] Blocked encrypted samples are not enqueued after a CDM is attached to a...
Andy Estes
Reported
2024-01-19 23:02:12 PST
[EME] Blocked encrypted samples are not enququed after a CDM is attached to a SourceBuffer (affects netflix.com)
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-01-19 23:02:29 PST
<
rdar://problem/120879185
>
Andy Estes
Comment 2
2024-01-19 23:28:18 PST
https://github.com/WebKit/WebKit/pull/23010
EWS
Comment 3
2024-01-22 18:40:35 PST
Committed
273340@main
(d7336d4f5da6): <
https://commits.webkit.org/273340@main
> Reviewed commits have been landed. Closing PR #23010 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug